--- a/S2_P2_PHY1.tex
+++ b/S2_P2_PHY1.tex
@@ -186,7 +186,7 @@ Note that $r$ and $\sigma$ are functions of the position, even if we dropped the
     If we calculate the moment of inertia at the point $x = 0$ we get
 
     \begin{equation}
-        I_0 = \int_0^L x^2 \dd{m} = \int_0^L x^2 \lambda \dd{x} = \left[ \lambda frac{x^3}{3} \right]_0^L = \frac{1}{3} ML^2
+        I_0 = \int_0^L x^2 \dd{m} = \int_0^L x^2 \lambda \dd{x} = \left[ \lambda \frac{x^3}{3} \right]_0^L = \frac{1}{3} ML^2
     \end{equation}
 
     Note that the moment of inertia depends on the point we calculate it on, for instance, if we calculate it at the center of mass we get
