--- a/S2_P2_AN2.tex
+++ b/S2_P2_AN2.tex
@@ -7,7 +7,7 @@
 
 \setlength{\headheight}{17pt} % ??? we do what fancyhdr tells us to do
 
-\renewcommand{\vec}[1]{\munderbar{\bm{#1}}}
+\renewcommand{\vec}[1]{\uvec{#1}}
 \newcommand{\Hg}{{\operatorfont Hg}}
 
 \begin{document}
