--- a/S2_P2_PROB.tex
+++ b/S2_P2_PROB.tex
@@ -15,7 +15,7 @@
 \newcommand{\Exponential}{{\operatorfont Exponential}}
 \newcommand{\BivariateNormal}{{\operatorfont BivariateN}}
 
-\renewcommand{\vec}[1]{\munderbar{\bm{#1}}}
+\renewcommand{\vec}[1]{\uvec{#1}}
 
 \begin{document}
 
