--- a/S2_P2_CS2.tex
+++ b/S2_P2_CS2.tex
@@ -9,7 +9,7 @@
 
 \setlength{\headheight}{17pt} % ??? we do what fancyhdr tells us to do
 
-\renewcommand{\vec}[1]{\underline{\mathbf{#1}}}
+\renewcommand{\vec}[1]{\uvec{#1}}
 
 \begin{document}
 
