--- a/S2_P2_PHY1.tex
+++ b/S2_P2_PHY1.tex
@@ -800,8 +800,8 @@ this means that if we want to calculate the probability of the position and velo
 First we look at what is the momentum change that is caused by the collision of a particle with the wall.
 That is
 \begin{align}
-    \delta p^\text{particle} & = -2 m v_x \\
-    \delta p^\text{wall}     & = 2 m v_x
+    \delta p^\text{particle}_x & = -2 m v_x \\
+    \delta p^\text{wall}_x     & = 2 m v_x
 \end{align}
 
 However we don't have to integrate over all the volume, if we consider a $\Delta t$ we can exclude all the volume where the particles are not fast enough to reach the wall in such time $\Delta t$: we call this volume $\Delta V$.
@@ -810,7 +810,7 @@ However we don't have to integrate over all the volume, if we consider a $\Delta
     \text{\# collision } = \mathscr{N} \int_{\Delta V} \frac{\dd{V}}{V} = \mathscr{N} \frac{1}{V} \underbrace{A v_x \Delta t}_{\Delta V}
 \end{equation}
 
-Then we can calculate teh total momentum change in one direction:
+Then we can calculate the total momentum change in one direction:
 \begin{align}
     \Delta p_x & = \int_0^\infty \dd{v_x} \rho(v_x) \delta p(v_x) (\text{\# collision for }v_x) \\
                & =\frac{2m \mathscr{N}}{V} A \Delta t \int_0^\infty \dd{v_x} v_x^2 \rho(v_x)    \\
@@ -819,5 +819,62 @@ then the pressure is
 \begin{align}
     p = \frac{F}{A} = \frac{\Delta p / \Delta t}{A} = m \mathscr{N} \anglebraces{v_x^2}
 \end{align}
+
+\begin{align}
+    \anglebraces{\delta p_x I(\text{collision happens})} & =
+    \iiint \frac{\dd{x} \dd{y} \dd{z}}{V} I(\abs{x - L} < v_x \Delta t) \nonumber                                                                                                                                         \\
+                                                         & \iiint \dd{v_x} \dd{v_y} \dd{v_z} \frac{1}{V} \left(\frac{1}{\sqrt{2 \pi} \sigma}\right) e^{-\frac{\norm{\vec v}^2}{2 \sigma^2}} 2 m v_x I(v_x > 0)            \\
+                                                         & = \frac{A \Delta t}{V} 2m \underbrace{\iint  \dd{v_y} \dd{v_z} \left(\frac{1}{\sqrt{2 \pi} \sigma}\right) e^{-\frac{v_y^2 + v_z^2}{2 \sigma^2}}}_{1} \nonumber \\
+                                                         & \underbrace{\int_0^\infty \dd{v_x} \left(\frac{1}{\sqrt{2 \pi} \sigma}\right) e^{-\frac{v_x^2 }{2 \sigma^2}}v_x^2}_{\frac{1}{2} \anglebraces{v_x^2}}           \\
+                                                         & = \frac{m A \Delta t}{V} \anglebraces{v_x^2}
+\end{align}
+
+Then the total momentum shift is
+\begin{equation}
+    \Delta p_x = \mathscr{N} \frac{m A \Delta t}{V} \anglebraces{v_x^2}
+\end{equation}
+and we can calculate the pressure as
+\begin{align}
+    p & = \frac{F_x}{A} = \frac{\Delta p_x / \Delta t}{A}          \\
+      & = \mathscr{N} \frac{m}{V} \anglebraces{v_x^2}              \\
+      & = \frac{2 \mathscr{N}}{V} \anglebraces{\frac{1}{2}m v_x^2} \\
+      & = \frac{2 \mathscr{N}}{3 V} \anglebraces{\frac{1}{2}m v^2} \\
+      & = \frac{2 \mathscr{N}}{3 V} U
+\end{align}
+where $U$ is the internal energy. We then get the famous relationship
+\begin{equation}
+    pV = \frac{2}{3}U
+\end{equation}
+
+\subsubsection{Adiabatic compression}
+
+We compress the gas of some $\dd{V} < 0$ very slowly such that at every step we give the gas the time to reach a well defined maxwell distribution.
+In this way the gas does not lose energy.
+
+We will call $W$ the work done \emph{on} the gas and we have that $\dd{W} = \dd{U}$.
+
+Differentiating $U = \frac{3}{2} pV$ we get
+\begin{equation}
+    \dd{U} = \frac{3}{2} (\dd{p} V + p \dd{V}) = -p\dd{V}
+\end{equation}
+which we can arrange as
+\begin{equation}
+    \frac{\dd{p}}{p} + \frac{5}{3}\frac{\dd{V}}{{V}} = 0
+\end{equation}
+which is separable differential equation which we can solve to get
+\begin{equation}
+    \dd{\log p} + \frac{5}{3} \dd{\log V} = 0
+\end{equation}
+but this means that if we collect the $\dd$ we obtain that the rest must be constant because the derivative is $0$.
+We get that
+\begin{equation}
+    p V^\gamma = \text{ const}
+\end{equation}
+where $\gamma = \frac{5}{3}$ if we assume the gas is monoatomic.
+
+Moreover, somehow the following relationship holds
+\begin{equation}
+    pV = (\gamma - 1) U
+\end{equation}
 
 \end{document}
