Add a back to toc button

--- a/S2_P2_AN2.tex
+++ b/S2_P2_AN2.tex
@@ -12,9 +12,7 @@
 
 \begin{document}
 
-\maketitle
-\tableofcontents
-\clearpage
+\firstpage
 
 % \chapter{Functions from \texorpdfstring{$\R^d$}{Rd} to \texorpdfstring{$\R^p$}{Rp}}
 
