--- a/S2_P2_CS2.tex
+++ b/S2_P2_CS2.tex
@@ -13,9 +13,7 @@
 
 \begin{document}
 
-\maketitle
-\tableofcontents
-\clearpage
+\firstpage
 
 % Class of 20/03/2024
 \section{Dynamic programming}
