--- a/S2_P2_PHY1.tex
+++ b/S2_P2_PHY1.tex
@@ -18,9 +18,7 @@
 
 \begin{document}
 
-\maketitle
-\tableofcontents
-\clearpage
+\firstpage
 
 % Class of 21/03/2024
 \section{Rotational Dynamics}
