--- a/preamble_base.sty
+++ b/preamble_base.sty
@@ -44,4 +44,12 @@
 
 \setcounter{secnumdepth}{3}
 
+\newcommand{\firstpage}{
+    \maketitle
+    \phantomsection
+    \hypertarget{toc}{}
+    \tableofcontents
+    \clearpage
+}
+
 \endinput
