Add custom fonts

--- a/preamble_base.sty
+++ b/preamble_base.sty
@@ -18,6 +18,10 @@
 \RequirePackage{enumitem} % for custom lists
 \RequirePackage{hyperref} % for hyperlinks
 
+\RequirePackage{fontspec}
+\newfontface\virgil{Virgil 3 YOFF}
+\setsansfont{Ubuntu}
+\setmonofont{Fira Code}
 % Use sans-serif font
 \renewcommand{\familydefault}{\sfdefault}
 
